-- fix minor test base inconsistencies
Signed-off-by: Thomas Diesler <tdiesler@proton.me>